--- a/public/package.json
+++ b/public/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.2.1",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
+    "vuedraggable": "^2.15.0",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
