--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mongoose": "^4.11.8"
   },
   "engines":{
-    "node": "^8.0.0",
-    "npm": "^5.0.0"
+    "node": "8.1.4",
+    "npm": "5.0.3"
   }
 }
