--- a/public/package.json
+++ b/public/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "sweetalert2": "^7.11.0",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
     "vuedraggable": "^2.16.0",
